--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "xdl": "^60.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
