--- a/ios/Podfile
+++ b/ios/Podfile
@@ -40,7 +40,7 @@ end
 
 target 'Swift' do
   use_expo_modules!
-  config = use_native_modules!
+  
 
   use_frameworks! :linkage => podfile_properties['ios.useFrameworks'].to_sym if podfile_properties['ios.useFrameworks']
   use_frameworks! :linkage => ENV['USE_FRAMEWORKS'].to_sym if ENV['USE_FRAMEWORKS']
@@ -49,7 +49,7 @@ target 'Swift' do
   flags = get_default_flags()
 
   use_react_native!(
-    :path => config[:reactNativePath],
+    :path => config[:reactNativPath],
     :hermes_enabled => podfile_properties['expo.jsEngine'] == nil || podfile_properties['expo.jsEngine'] == 'hermes',
     :fabric_enabled => flags[:fabric_enabled],
     # An absolute path to your application root.
