This commit updates the app to Expo Router v1

--- a/app.json
+++ b/app.json
@@ -1,5 +1,9 @@
 {
   "expo": {
+    "scheme": "swift",
+    "web": {
+      "bundler": "metro"
+    },
     "name": "Swift",
     "slug": "Swift",
     "version": "1.0.0",
@@ -25,9 +29,6 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       }
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
     },
     "extra": {
       "eas": {
