--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "swift",
+  "name": "Swift",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start --dev-client",
@@ -15,8 +15,10 @@
     "expo-router": "^1.5.3",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
+    "i": "^0.3.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-native": "0.71.3",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
@@ -25,6 +27,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
+  },
+  "resolutions": {
+    "metro": "^0.73.7",
+    "metro-resolver": "^0.73.7"
+  },
+  "overrides": {
+    "metro": "^0.73.7",
+    "metro-resolver": "^0.73.7"
   },
   "private": true
 }
