--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "expo": "~48.0.15",
     "expo-constants": "~14.2.1",
     "expo-linking": "~4.0.1",
