--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Swift",
+  "name": "swift",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start --dev-client",
@@ -9,9 +9,8 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "axios": "^1.4.0",
     "expo": "~48.0.15",
-    "expo-constants": "~14.2.1",
+    "expo-device": "^5.2.1",
     "expo-linking": "~4.0.1",
     "expo-router": "^1.5.3",
     "expo-splash-screen": "~0.18.2",
